<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.home.HomeFragment"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:src="@drawable/temperatuta"/>

            <TextView
                android:id="@+id/txt_tituloT"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:gravity="center"
                android:text="@string/title_temperatura"
                android:textColor="@color/Azul_Titulos"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_de"/>

            <Spinner
                android:id="@+id/text_OpcionesEntradaT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/text_entradaT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_a"/>

            <Spinner
                android:id="@+id/text_OpcionesSalidaT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/text_salidaT"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:ems="10"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btn_ConvertirT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cornerRadius="100dp"
                android:onClick="conClickConvertirT"
                android:text="@string/btn_Convertir" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>