<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.dashboard.DashboardFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="300dp"

            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:src="@drawable/volumen"/>

            <TextView
                android:id="@+id/txt_tituloV"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:gravity="center"
                android:text="@string/title_volumen"
                android:textColor="@color/Azul_Titulos"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_de"/>

            <Spinner
                android:id="@+id/text_OpcionesEntradaVolumen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/text_entradaV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_a"/>

            <Spinner
                android:id="@+id/text_OpcionesSalidaV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/text_salidaV"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:ems="10"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btn_ConvertirV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_Convertir"
                app:cornerRadius="100dp"
                android:onClick="conClickConvertirV"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>